# lista-tareas

./: .env.example  .gitignore  pyproject.toml  test.db
app/: main.py
app/core/: config.py  dependencies.py  security.py
app/db/: session.py
app/module/auth/: models.py  repository.py  router.py  schemas.py  service.py
app/module/task/: enums.py  models.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py  test_auth.py  test_auth_service.py  test_tasks.py
