[project]
name = "lista-tareas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "fastapi[all]>=0.136.1",
    "greenlet>=3.5.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
]
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (imports sin usar, variables muertas)
    "I",    # isort (orden de imports)
    "B",    # bugbear (bugs comunes)
    "UP",   # pyupgrade (sintaxis moderna)
    "SIM",  # simplificaciones
]
ignore = [
    "E501",  # línea muy larga (el formatter lo maneja)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
]
